--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,3 +7,25 @@ server.port=8081
 springdoc.swagger-ui.path=/swagger-ui.html
 springdoc.api-docs.path=/api-docs
 inventory.url=http://localhost:8082
+
+#actuator endpoints
+management.endpoints.web.exposure.include=*
+management.endpoint.health.show-details=always
+management.health.circuitbreakers.enabled=true
+
+#Resilience4j Properties
+resilience4j.circuitbreaker.instances.inventory.registerHealthIndicator=true
+resilience4j.circuitbreaker.instances.inventory.slidingWindowType=COUNT_BASED
+resilience4j.circuitbreaker.instances.inventory.slidingWindowSize=10
+resilience4j.circuitbreaker.instances.inventory.failureRateThreshold=50
+resilience4j.circuitbreaker.instances.inventory.waitDurationInOpenState=5s
+resilience4j.circuitbreaker.instances.inventory.permittedNumberOfCallsInHalfOpenState=5
+resilience4j.circuitbreaker.instances.inventory.automaticTransitionFromOpenToHalfOpenEnabled=true
+resilience4j.circuitbreaker.instances.inventory.minimumNumberOfCalls=5
+
+#resilience4i Timeout Properties
+resilience4j.timelimiter.instances.inventory.timeoutDurationInMilliseconds=3000
+
+#resilience Retry Properties
+resilience4j.retry.instances.inventory.maxAttempts=3
+resilience4j.retry.instances.inventory.waitDuration=2s
